--- a/MyWouldYouRather/package.json
+++ b/MyWouldYouRather/package.json
@@ -24,6 +24,10 @@
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react-hooks": "4.0.5",
+    "eslint-plugin-simple-import-sort": "5.0.3",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1",
