- adds new dependencies

--- a/MyWouldYouRather/ios/Podfile
+++ b/MyWouldYouRather/ios/Podfile
@@ -8,6 +8,8 @@ target 'MyWouldYouRather' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'ReactNativeLocalization', :path => '../node_modules/react-native-localization'
+
   target 'MyWouldYouRatherTests' do
     inherit! :complete
     # Pods for testing
