--- a/MyWouldYouRather/package.json
+++ b/MyWouldYouRather/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "lodash": "4.17.15",
     "react": "16.13.1",
-    "react-native": "0.63.0"
+    "react-native": "0.63.0",
+    "react-native-localization": "2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/lodash": "4.14.157",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.1",
     "@types/react-test-renderer": "^16.9.2",
